feat: 300 thread and timeout